default/objects/WS_Data_Type_Association__c/WS_Data_Type_Association__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Data Type Association</label>
    <nameField>
        <displayFormat>WSDTA-{0000}</displayFormat>
        <label>Cross-Sell Data Type Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross-Sell Data Type Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>