default/objects/WS_Data_Type_Association__c/fields/White_Space_Cell__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Cell__c</fullName>
    <label>White Space Cell</label>
    <referenceTo>White_Space_Cell__c</referenceTo>
    <relationshipLabel>Cross-Sell Data Type Associations</relationshipLabel>
    <relationshipName>Cross_Sell_Data_Type_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>