default/objects/WS_Data_Type_Association__c/fields/WS_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>WS_Data_Type__c</fullName>
    <label>WS Data Type</label>
    <referenceTo>WS_Data_Type__c</referenceTo>
    <relationshipLabel>Cross-Sell Data Type Associations</relationshipLabel>
    <relationshipName>Cross_Sell_Data_Type_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>