default/objects/WS_Data_Type_Association__c/fields/WS_Data_Value__c.field-meta.xml
<CustomField>
    <fullName>WS_Data_Value__c</fullName>
    <label>WS Data Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>